# comfyui4macos

./: .gitignore  2D_SERIES_PLAN.md  DIGITAL_HUMAN_3D_DRAMA_DESIGN.md  DIGITAL_HUMAN_VIDEO_DESIGN.md  DREAM_FACTORY_ROADMAP.md  LICENSE  LONG_SERIES_OPTIMIZATION.md  OPTIMIZATION_PLAN.md  README.md  REALISTIC_DIGITAL_HUMAN_PLAN.md  REVIEW_REPORT.md  pyproject.toml  requirements.txt  run_series_qingxi.py  run_xiyou.py  test_qingxi.py  test_qingxi_full.py  test_qingxi_resume.py
custom_nodes4macos/: README.md  __init__.py  ffmpeg_util.py  fusion_client.py  pytest.ini  server_routes.py
custom_nodes4macos/nodes/: assemble.py  dream_factory.py  flux_image.py  horror_tts.py  ken_burns.py  prompt_expand.py
custom_nodes4macos/pipeline/: __init__.py  checkpoint.py  context.py  engine.py  model_manager.py  result.py  stage.py  wan_utils.py
custom_nodes4macos/prompts/: ad_director.md  digital_human_director.md  horror_director.md  medium_director.md  puppet_director.md  series_director.md
custom_nodes4macos/publisher/: __init__.py  douyin.py
custom_nodes4macos/tests/: test_assemble.py  test_assemble_xfade.py  test_character_consistency.py  test_checkpoint.py  test_checkpoint_atomic.py  test_dream_factory_node.py  test_engine_and_loaders.py  test_ffmpeg_util_edges.py  test_flux_image.py  test_fusion_client_advanced.py  test_horror_tts.py  test_ken_burns.py  test_ken_burns_audio_cut.py  test_multi_pose.py  (+19 more)
docs/: P3_FAN_FEEDBACK_EVAL.md  P3_MULTIAGENT_EVAL.md  P3_VIDEO_MOTION_EVAL.md
scripts/: login_setup.py  ltx_generate.py  wan22_drama.py  wan22_generate.py  wan22_test.py
(+29 files in other folders)
