[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "comfyui4macos"
version = "1.0.0"
description = "MLX-native AI content production pipeline for macOS — Dream Factory (梦工厂)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "dahai80"}]
keywords = ["mlx", "comfyui", "macos", "ai", "video-generation", "tts", "image-generation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "mlx",
    "mlx-lm",
    "mlx-audio",
    "Pillow",
    "numpy",
    "pyyaml",
    "httpx",
]

[project.optional-dependencies]
pdf = ["pymupdf", "ebooklib", "beautifulsoup4"]
dev = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["custom_nodes4macos/tests"]
python_files = ["test_*.py"]

[tool.setuptools.packages.find]
include = ["custom_nodes4macos*"]
